# carvis-api

./: .gitignore  Dockerfile  HELP.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml  deploy.yml  docker.yml
cars-get/: Cargo.toml  Dockerfile
cars-get/src/: main.rs
cars_get/: Cargo.toml  Dockerfile
cars_get/src/: main.rs
lambdas/request-get/: Cargo.toml
lambdas/request-get/src/: main.rs
lambdas/requests-get/: Cargo.toml
lambdas/requests-get/src/: main.rs
lambdas/requests-post/: Cargo.toml  Dockerfile
lambdas/requests-post/src/: main.rs
lib/auth/: Cargo.toml
lib/auth/src/: lib.rs
lib/model/: Cargo.toml
lib/model/src/: lib.rs
lib/model/src/common/: mod.rs
lib/model/src/error/: mod.rs
lib/model/src/request/: mod.rs
lib/model/src/util/: mod.rs
requests-get/: Cargo.toml  Dockerfile
requests-get/src/: main.rs
requests-post/src/: main.rs
src/main/kotlin/cloud/carvis/api/: Application.kt
src/main/kotlin/cloud/carvis/api/auth/: AudienceValidator.kt  CustomAuth0RoleConverter.kt
src/main/kotlin/cloud/carvis/api/clients/: Auth0RestClient.kt
src/main/kotlin/cloud/carvis/api/config/: AmazonDynamoDBConfig.kt  AmazonS3Config.kt  AmazonSqsConfig.kt  Auth0Config.kt  CacheConfig.kt  CorsConfig.kt  HttpConfig.kt  HttpSecurityConfig.kt  SecurityConfig.kt
src/main/kotlin/cloud/carvis/api/filter/: TraceIdFilter.kt
src/main/kotlin/cloud/carvis/api/mapper/: CarMapper.kt  EntityMapper.kt  Mapper.kt  RequestMapper.kt
src/main/kotlin/cloud/carvis/api/properties/: AuthProperties.kt  CorsProperties.kt  EmailProperties.kt  S3Buckets.kt  SqsQueues.kt  (+1 more)
src/main/kotlin/cloud/carvis/backend/: BackendApplication.kt
src/main/resources/: application-dev.yml  application-live.yml  application.yml
src/test/kotlin/cloud/carvis/api/: AbstractApplicationTest.kt  SesHelper.kt
src/test/kotlin/cloud/carvis/backend/: AbstractApplicationTest.kt  BackendApplicationTests.kt
(+215 files in other folders)
