[package]
name = "cars_get"
version = "0.1.0"
authors = ["Patrick Kissling <patrick.kissling@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.3"
lambda_runtime = "0.3"
base64 = "0.13.0"
http = "0.2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_urlencoded = "0.7.0"

log = "^0.4"
maplit = "1.0"
tokio = { version = "1.0", features = ["macros"] }