[package]
name = "request-get"
version = "0.1.0"
authors = ["Patrick Kissling <patrick.kissling@gmx.de>"]
edition = "2018"

[dependencies]
lambda_http = "0.3"
lambda_runtime = "0.3"
auth = { path = "../../lib/auth", version = "0.1.0" }
model = { path = "../../lib/model", version = "0.1.0" }
base64 = "0.13.0"
serde_urlencoded = "0.7.0"
log = "0.4.1"
maplit = "1.0"
tokio = { version = "1.0", features = ["macros"] }
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
lazy_static = "1.4.0"