[package]
name = "auth"
version = "0.1.0"
authors = ["Patrick Kissling <patrick.kissling@gmx.de>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
alcoholic_jwt = "1.0.0"
lambda_http = "0.3"
serde = { version = "^1", features = ["derive"] }
http = "0.2"
serde_json = "^1"
model = { path = "../model", version = "0.1.0" }
