[package]
name = "model"
version = "0.1.0"
authors = ["Patrick Kissling <patrick.kissling@gmx.de>"]
edition = "2018"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
chrono = "0.4"
rusoto_dynamodb = "0.46.0"
lambda_http = "0.3"
uuid = { version = "0.8", features = ["v4"] }